--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
-    "@remix-run/react": "^2.13.1",
-    "@remix-run/server-runtime": "^2.13.1",
-    "@shopify/hydrogen": "2024.10.1",
-    "@shopify/remix-oxygen": "^2.0.9",
+    "@remix-run/react": "^2.15.3",
+    "@remix-run/server-runtime": "^2.15.3",
+    "@shopify/hydrogen": "^2025.1.2",
+    "@shopify/remix-oxygen": "^2.0.11",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "intl-parse-accept-language": "^1.0.0",
@@ -28,11 +28,11 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
-    "@remix-run/dev": "^2.13.1",
-    "@remix-run/eslint-config": "^2.13.1",
-    "@shopify/cli": "~3.73.0",
+    "@remix-run/dev": "^2.15.3",
+    "@remix-run/eslint-config": "^2.15.3",
+    "@shopify/cli": "^3.75.4",
     "@shopify/hydrogen-codegen": "^0.3.2",
-    "@shopify/mini-oxygen": "^3.1.0",
+    "@shopify/mini-oxygen": "^3.1.1",
     "@shopify/oxygen-workers-types": "^4.1.2",
     "@shopify/prettier-config": "^1.1.2",
     "@total-typescript/ts-reset": "^0.4.2",
