--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-in-viewport": "^1.0.0-beta.8",
     "react-intersection-observer": "^9.16.0",
+    "react-scroll": "^1.9.3",
     "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
